--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <script type="text/javascript" src="https://www.google.com/books/jsapi.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" />
   <title>React Reading List</title>
 </head>
