--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <script type="text/javascript" src="https://www.google.com/books/jsapi.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" />
-  <title>React Reading List</title>
+  <title>Google Book Search</title>
 </head>
 
 <body>
